# github-metrics

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  alembic.ini  entrypoint.py  eslint.config.js  pyproject.toml  pytest.ini  tox.toml
backend/: app.py  config.py  pr_story.py  sig_teams.py
backend/migrations/versions/: 20251210_0001_remove_cross_team_columns.py
backend/routes/: webhooks.py
backend/routes/api/: __init__.py  comment_resolution.py  contributors.py  cross_team.py  maintainers.py  team_dynamics.py
dev/: README.md  docker-compose.yml  export-db.sh  run-all.sh  run-backend.sh  run.sh
examples/: docker-compose.yaml
frontend/: .eslintrc.cjs  DEVELOPMENT.md  README.md  package.json
frontend/src/: App.css  main.tsx
frontend/src/components/: date-format-provider.tsx  theme-provider.tsx
frontend/src/context/: date-format-context.ts
frontend/src/contexts/: filter-context-definition.tsx  filter-context.tsx
frontend/src/hooks/: use-api.ts  (+2 more)
github_metrics/: app.py  config.py  database.py  metrics_tracker.py  models.py  pr_story.py  webhook_setup.py
github_metrics/migrations/: env.py
github_metrics/routes/: __init__.py  dashboard.py  health.py  webhooks.py
github_metrics/utils/: contributor_queries.py  datetime_utils.py  query_builders.py  response_formatters.py  security.py
github_metrics/web/: dashboard.py
tests/: README.md  README_UI_TESTS.md  __init__.py  conftest.py  test_app.py  test_comment_resolution.py  test_config.py  test_dashboard.py  test_database.py  test_js_coverage_utils.py  test_mcp.py  test_metrics_tracker.py  test_pr_story.py  test_response_formatters.py  test_security.py  test_sig_teams.py  test_team_dynamics.py  test_webhook_setup.py
tests/ui/: test_ui_dashboard.py  test_ui_dashboard_contributors.py  test_ui_dashboard_overview.py  test_ui_dashboard_team_dynamics.py
(+63 files in other folders)
